--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body {
     color: #333;
     margin: 20px 0;
   }
-  
+  ul{
+    text-align: left;
+  }
   p.left {
     font-size: 18px;
     color: #666;
